--- a/SayinEditor/app/src/main/res/layout/activity_main.xml
+++ b/SayinEditor/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
     <EditText
+        android:id="@+id/mainEditText"
         android:background="#505d64"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
