--- a/SayinEditor/app/src/main/res/values/colors.xml
+++ b/SayinEditor/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#52585c</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#505d64</color>
 </resources>
