--- a/SayinEditor/app/src/main/res/layout/activity_main.xml
+++ b/SayinEditor/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,9 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
+        android:layout_gravity="end"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
