Added button for keyboard dislpay

--- a/SayinEditor/app/src/main/res/layout/app_bar_main.xml
+++ b/SayinEditor/app/src/main/res/layout/app_bar_main.xml
@@ -20,15 +20,27 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/micfab"
         app:elevation="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_mic_white_24dp"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/keyfab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/keyboard"
+        app:elevation="10dp" />
 
 </android.support.design.widget.CoordinatorLayout>
