--- a/SayinEditor/app/src/main/res/layout/content_main.xml
+++ b/SayinEditor/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
     <EditText
         android:id="@+id/mainEditText"
         android:background="#505d64"
-        android:focusable="false"
+        android:focusable="true"
         android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
