--- a/SayinEditor/app/src/main/res/menu/activity_main_drawer.xml
+++ b/SayinEditor/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,8 +16,17 @@
             android:id="@+id/semi_colon"
             android:title=";" />
         <item
-            android:id="@+id/angular_brackets"
-            android:title="@string/ang_bracket" />
+            android:id="@+id/angular_bracket_left"
+            android:title="@string/ang_bracket_left" />
+        <item
+            android:id="@+id/angular_bracket_right"
+            android:title="@string/ang_bracket_right" />
+        <item
+            android:id="@+id/angular_bracket_gequal"
+            android:title="@string/ang_bracket_gequal" />
+        <item
+            android:id="@+id/angular_bracket_lequal"
+            android:title="@string/ang_bracket_lequal" />
     </group>
     <item
         android:id="@+id/addition"
@@ -28,6 +37,15 @@
     <item
         android:id="@+id/division"
         android:title="/" />
+    <item
+        android:id="@+id/modulus"
+        android:title="%" />
+    <item
+        android:id="@+id/assignment"
+        android:title="=" />
+    <item
+        android:id="@+id/multiplication"
+        android:title="*" />
 
 
 
