--- a/SayinEditor/app/src/main/res/layout/app_bar_main.xml
+++ b/SayinEditor/app/src/main/res/layout/app_bar_main.xml
@@ -26,7 +26,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/micfab"
-        app:elevation="0dp"
+        app:elevation="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -40,7 +40,7 @@
         android:layout_gravity="bottom"
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="10dp"
-        android:src="@drawable/keyboard"
+        android:src="@drawable/ic_keyboard_white_24dp"
         app:elevation="10dp" />
 
 </android.support.design.widget.CoordinatorLayout>
