--- a/SayinEditor/app/src/main/res/layout/activity_main.xml
+++ b/SayinEditor/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view_left"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
