--- a/SayinEditor/app/src/main/res/layout/content_snippet.xml
+++ b/SayinEditor/app/src/main/res/layout/content_snippet.xml
@@ -7,5 +7,15 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.perfection.utkarsh.sayineditor.SnippetActivity"
     tools:showIn="@layout/activity_snippet">
-
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/gridview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        />
 </android.support.constraint.ConstraintLayout>
