--- a/SayinEditor/app/src/main/res/menu/activity_main_drawer.xml
+++ b/SayinEditor/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,5 +11,9 @@
         android:icon="@drawable/ic_file_download_black_18dp"
         android:title="Save"
         android:id="@+id/action_save" />
+    <item
+        android:icon="@drawable/ic_sentiment_very_satisfied_black_18dp"
+        android:title="Add Snippets"
+        android:id="@+id/snippets" />
 
 </menu>
