--- a/SayinEditor/app/src/main/res/layout/activity_snippet.xml
+++ b/SayinEditor/app/src/main/res/layout/activity_snippet.xml
@@ -23,7 +23,7 @@
     <include layout="@layout/content_snippet" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_snippet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
