--- a/SayinEditor/app/src/main/res/menu/main.xml
+++ b/SayinEditor/app/src/main/res/menu/main.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Help"
         app:showAsAction="never" />
 
 </menu>
