--- a/SayinEditor/app/src/main/res/layout/activity_help.xml
+++ b/SayinEditor/app/src/main/res/layout/activity_help.xml
@@ -9,7 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="help"
-        tools:context=".MainActivity" />
+        android:text="help"/>
 
 </RelativeLayout>
