--- a/SayinEditor/app/src/main/res/menu/activity_code_drawer.xml
+++ b/SayinEditor/app/src/main/res/menu/activity_code_drawer.xml
@@ -12,6 +12,9 @@
         android:id="@+id/curved_brackets"
         android:title="( )" />
     <item
+        android:id="@+id/back_slash"
+        android:title="\\" />
+    <item
         android:id="@+id/semi_colon"
         android:title=";" />
     <item
