Added file for snippets

--- a/SayinEditor/app/src/main/res/layout/activity_help.xml
+++ b/SayinEditor/app/src/main/res/layout/activity_help.xml
@@ -25,8 +25,7 @@
             android:layout_height="wrap_content"
             android:text="    To Print: int a;"
             android:textSize="20sp"
-            android:textColor="#000"
-            />
+            android:textColor="#000"/>
     </LinearLayout>
     </ScrollView>
 </LinearLayout>
