--- a/SayinEditor/app/src/main/res/layout/enter_snippet.xml
+++ b/SayinEditor/app/src/main/res/layout/enter_snippet.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="65dp"
         android:layout_marginStart="10dp"
         android:text="Voice Message for the Snippet"
         android:textSize="23sp"
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_marginStart="10dp"
         android:text="Code Line to Display"
         android:textSize="23sp"
@@ -29,7 +29,7 @@
     <EditText
         android:id="@+id/code_custom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginHorizontal="10dp"/>
 
     <Button
