--- a/SayinEditor/app/src/main/res/layout/activity_snippet.xml
+++ b/SayinEditor/app/src/main/res/layout/activity_snippet.xml
@@ -20,7 +20,17 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_snippet" />
+    <ListView android:id="@+id/list"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        tools:listitem="@layout/list_item"
+        android:layout_height="match_parent"
+        tools:context="com.perfection.utkarsh.sayineditor.SnippetActivity"
+        android:orientation="vertical">
+
+    </ListView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_snippet"
