--- a/SayinEditor/app/src/main/res/layout/list_item.xml
+++ b/SayinEditor/app/src/main/res/layout/list_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/list_item"
     android:orientation="vertical"
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -13,12 +14,12 @@
             android:id="@+id/voice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="s"/>
+            tools:text="s"/>
 
         <TextView
             android:id="@+id/code"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sa"/>
+            tools:text="sa"/>
 
     </LinearLayout>
