--- a/SayinEditor/app/src/main/res/layout/list_view_file.xml
+++ b/SayinEditor/app/src/main/res/layout/list_view_file.xml
@@ -1,14 +1,11 @@
-<RelativeLayout
+<?xml version="1.0" encoding="utf-8"?>
+<ListView android:id="@+id/list"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.perfection.utkarsh.sayineditor.SnippetActivity"
+    android:orientation="vertical">
 
-    <ListView
-        android:id="@+id/list"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:divider="@null"
-        android:dividerHeight="0dp"/>
-
-</RelativeLayout>
+</ListView>
